test/error/iface/err9.rzy
interface
  Iface
    function funcA();
    function funcB();
  end

component
  Sub
    output
      out: Iface;
      out2: Iface;
      
    implementation elementary
  end

  Err9
    implementation elementary
    
    component
      a : Sub;

    function a.out2.funcA()
    end

    function a.out2.funcB()
    end

  end

